--- a/style.css
+++ b/style.css
@@ -176,6 +176,15 @@ canvas{
     padding: 5px;
 }
 /*----------------text-------------------*/
+.canvasContainer {
+    width: 400px;
+    max-height: 300px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow-y: scroll;
+    overflow-x: hidden;
+}
 /*----------------pdf-------------------*/
 .docx {
     margin: 10px 0;
